integration_tests/codegen_fail/fail/interface/attr_wrong_item_impl_block.stderr
error: #[graphql_interface] attribute is applicable to trait and struct definitions only
 --> fail/interface/attr_wrong_item_impl_block.rs:8:1
  |
8 | #[graphql_interface(for = ObjA)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `graphql_interface` (in Nightly builds, run with -Z macro-backtrace for more info)
